# mnml-test-cypress

./: Cargo.toml  README.md  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: release.yml
src/: app.rs  blit.rs  cypress.rs  keys.rs  main.rs  ui.rs
wix/: main.wxs
