[package]
name = "mnml-test-cypress"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cypress test results viewer for mnml — terminal TUI for mochawesome JSON. Shows the pass/fail status of every test, filterable to failures, with spec file:line yank. Runs standalone or as an mnml-hosted pane. The test runner stays in mnml core."
homepage = "https://mnml.sh"
repository = "https://github.com/chris-mclennan/mnml-test-cypress"
readme = "README.md"

[[bin]]
name = "mnml-test-cypress"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"

tmnl-protocol = { path = "../tmnl-protocol" }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
